feat: Implement a wide range of new gameplay features
This major update adds a significant number of new features to the game, greatly expanding its complexity and replayability.

New Features:
- **New Enemies**: Healer, Splitter, and Ghost enemies have been added, each with unique abilities.
- **New Towers**: Added the Detector, Gambler, Chain Lightning, and Converter towers, introducing new strategic options.
- **Tower Upgrades**: Implemented a tower upgrade system, allowing towers to be leveled up for improved stats.
- **Special Abilities**: Added two special abilities, "Airstrike" and "Freeze," with cooldowns and costs.
- **Map Selection**: The game now supports multiple maps, which can be selected from the start screen.

This commit also ensures that no compiled `.class` files are included in the source control.